--- a/90b267e353711b30/resume.html
+++ b/90b267e353711b30/resume.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>about me – Thomas Meilstrup - Data Science Portfolio</title>
+<title>Thomas Meilstrup’s CV – Thomas Meilstrup - Data Science Portfolio</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -74,7 +74,7 @@ ul.task-list li input[type="checkbox"] {
 <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="nav-sidebar docked nav-fixed">
+<body class="nav-fixed">
 
 <div id="quarto-search-results"></div>
   <header id="quarto-header" class="headroom fixed-top">
@@ -96,7 +96,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./resume.html"> 
+    <a class="nav-link active" href="./resume.html" aria-current="page"> 
 <span class="menu-text">My Resume</span></a>
   </li>  
   <li class="nav-item">
@@ -116,7 +116,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Machine Learning</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./full_stack.html" aria-current="page"> 
+    <a class="nav-link" href="./full_stack.html"> 
 <span class="menu-text">Full Stack</span></a>
   </li>  
   <li class="nav-item">
@@ -130,78 +130,37 @@ ul.task-list li input[type="checkbox"] {
 </div>
       </div> <!-- /container-fluid -->
     </nav>
-  <nav class="quarto-secondary-nav">
-    <div class="container-fluid d-flex">
-      <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
-        <i class="bi bi-layout-text-sidebar-reverse"></i>
-      </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="./full_stack.html">Full Stack</a></li></ol></nav>
-        <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
-        </a>
-    </div>
-  </nav>
 </header>
 <!-- content -->
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
-  <nav id="quarto-sidebar" class="sidebar collapse collapse-horizontal quarto-sidebar-collapse-item sidebar-navigation docked overflow-auto">
-    <div class="sidebar-menu-container"> 
-    <ul class="list-unstyled mt-1">
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./full_stack.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text">Full Stack</span></a>
-  </div>
-</li>
-        <li class="px-0"><hr class="sidebar-divider hi "></li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Full_Stack/project1.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Project 1</span></a>
-  </div>
-</li>
-        <li class="px-0"><hr class="sidebar-divider hi "></li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Full_Stack/project2.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Project 2</span></a>
-  </div>
-</li>
-        <li class="px-0"><hr class="sidebar-divider hi "></li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Full_Stack/project3.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Project 3</span></a>
-  </div>
-</li>
-        <li class="px-0"><hr class="sidebar-divider hi "></li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Full_Stack/project4.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Project 4</span></a>
-  </div>
-</li>
-        <li class="px-0"><hr class="sidebar-divider hi "></li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./Full_Stack/project5.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Project 5</span></a>
-  </div>
-</li>
-        <li class="px-0"><hr class="sidebar-divider hi "></li>
-    </ul>
-    </div>
-</nav>
-<div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#title-1-header" id="toc-title-1-header" class="nav-link active" data-scroll-target="#title-1-header">Title 1 Header</a>
+  <li><a href="#thomas-meilstrup" id="toc-thomas-meilstrup" class="nav-link active" data-scroll-target="#thomas-meilstrup">Thomas Meilstrup</a>
   <ul class="collapse">
-  <li><a href="#title-2-header" id="toc-title-2-header" class="nav-link" data-scroll-target="#title-2-header">Title 2 Header</a></li>
+  <li><a href="#currently" id="toc-currently" class="nav-link" data-scroll-target="#currently">Currently</a>
+  <ul class="collapse">
+  <li><a href="#skills" id="toc-skills" class="nav-link" data-scroll-target="#skills">Skills</a></li>
+  <li><a href="#research-interests" id="toc-research-interests" class="nav-link" data-scroll-target="#research-interests">Research interests</a></li>
+  </ul></li>
+  <li><a href="#education" id="toc-education" class="nav-link" data-scroll-target="#education">Education</a></li>
+  <li><a href="#awards" id="toc-awards" class="nav-link" data-scroll-target="#awards">Awards</a></li>
+  <li><a href="#work-and-volunteer-experiece" id="toc-work-and-volunteer-experiece" class="nav-link" data-scroll-target="#work-and-volunteer-experiece">Work and Volunteer Experiece</a>
+  <ul class="collapse">
+  <li><a href="#dairy-queen-cashier" id="toc-dairy-queen-cashier" class="nav-link" data-scroll-target="#dairy-queen-cashier">Dairy Queen – Cashier</a></li>
+  <li><a href="#california-san-diego-mission-social-media-leader" id="toc-california-san-diego-mission-social-media-leader" class="nav-link" data-scroll-target="#california-san-diego-mission-social-media-leader">California, San Diego Mission – Social Media Leader</a></li>
+  <li><a href="#church-of-jesus-christ-of-latter-day-saints-missionary" id="toc-church-of-jesus-christ-of-latter-day-saints-missionary" class="nav-link" data-scroll-target="#church-of-jesus-christ-of-latter-day-saints-missionary">Church of Jesus Christ of Latter-day Saints – Missionary</a></li>
+  <li><a href="#regal-cinemas-floor-staff" id="toc-regal-cinemas-floor-staff" class="nav-link" data-scroll-target="#regal-cinemas-floor-staff">Regal Cinemas – Floor Staff</a></li>
+  <li><a href="#honeybaked-ham-co.-crew-member" id="toc-honeybaked-ham-co.-crew-member" class="nav-link" data-scroll-target="#honeybaked-ham-co.-crew-member">HoneyBaked Ham Co.&nbsp;– Crew Member</a></li>
+  <li><a href="#king-soopers-courtesy-clerk" id="toc-king-soopers-courtesy-clerk" class="nav-link" data-scroll-target="#king-soopers-courtesy-clerk">King Soopers – Courtesy Clerk</a></li>
+  <li><a href="#stonegate-pool-snack-shack" id="toc-stonegate-pool-snack-shack" class="nav-link" data-scroll-target="#stonegate-pool-snack-shack">Stonegate Pool – Snack Shack</a></li>
+  <li><a href="#douglas-county-libraries-teen-library-council" id="toc-douglas-county-libraries-teen-library-council" class="nav-link" data-scroll-target="#douglas-county-libraries-teen-library-council">Douglas County Libraries – Teen Library Council</a></li>
+  <li><a href="#cheim-elementary-band-camp-directors-assistant" id="toc-cheim-elementary-band-camp-directors-assistant" class="nav-link" data-scroll-target="#cheim-elementary-band-camp-directors-assistant">CHEIM Elementary Band Camp – Director’s Assistant</a></li>
+  </ul></li>
   </ul></li>
   </ul>
 </nav>
@@ -211,8 +170,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">about me</h1>
-<p class="subtitle lead">my data science portfolio</p>
+<h1 class="title">Thomas Meilstrup’s CV</h1>
 </div>
 
 
@@ -229,13 +187,82 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="title-1-header" class="level1">
-<h1>Title 1 Header</h1>
-<section id="title-2-header" class="level2">
-<h2 class="anchored" data-anchor-id="title-2-header">Title 2 Header</h2>
-<p><a href="https://quarto.org/docs/authoring/markdown-basics.html#links-images">MarkDown Basics</a></p>
+<section id="thomas-meilstrup" class="level1">
+<h1>Thomas Meilstrup</h1>
+<p>Bioinformatician and Musician.</p>
+<section id="currently" class="level2">
+<h2 class="anchored" data-anchor-id="currently">Currently</h2>
+<p>Intern at BYU studying respiratory diseases with Chantel Sloan-Aagard</p>
+<section id="skills" class="level3">
+<h3 class="anchored" data-anchor-id="skills">Skills</h3>
+<p>Social Media Management. Computer Skills – Introductory Python, R, &amp; SQL. Capable Leader and Teacher. Quick Learner. Researcher</p>
+</section>
+<section id="research-interests" class="level3">
+<h3 class="anchored" data-anchor-id="research-interests">Research interests</h3>
+<p>Genetics, Molecular Biology, Biochemistry.</p>
+</section>
+</section>
+<section id="education" class="level2">
+<h2 class="anchored" data-anchor-id="education">Education</h2>
+<p><code>Fall 2017 - Spring 2021</code> <strong>Chaparral High School – Parker, CO</strong></p>
+<p><code>FALL 2021 – SPRING 2022, Fall 2024 -- PRESENT</code> <strong>Brigham Young University - Idaho – Rexburg, ID</strong></p>
+<ul>
+<li><p>Currently Majoring in Biology with an Emphasis in Bioinformatics.</p></li>
+<li><p>Member of the PhD Research Honor Society.</p></li>
+<li><p>Participating in an extracurricular research team doing PCR diagnostics for metabolic syndrome and Least Chub range testing.</p></li>
+</ul>
+</section>
+<section id="awards" class="level2">
+<h2 class="anchored" data-anchor-id="awards">Awards</h2>
+<p><strong>Boy Scouts</strong></p>
+<p><code>2017</code> Eagle Scout</p>
+<p><strong>Chaparral Band</strong></p>
+<p><code>2021</code> - John Philip Sousa Band Award - Senior Outstanding Band Student - Outstanding Citizenship Award</p>
+</section>
+<section id="work-and-volunteer-experiece" class="level2">
+<h2 class="anchored" data-anchor-id="work-and-volunteer-experiece">Work and Volunteer Experiece</h2>
+<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
+<section id="dairy-queen-cashier" class="level3">
+<h3 class="anchored" data-anchor-id="dairy-queen-cashier">Dairy Queen – Cashier</h3>
+<p><code>JUNE 2024 – SEPTEMBER 2024</code> Managed drive-through transactions. Assisted in closing most nights.</p>
+</section>
+<section id="california-san-diego-mission-social-media-leader" class="level3">
+<h3 class="anchored" data-anchor-id="california-san-diego-mission-social-media-leader">California, San Diego Mission – Social Media Leader</h3>
+<p><code>MAY 2023 – MAY 2024</code> Led and Managed social media teams while a volunteer missionary. Teams included Analytics, Graphic Design, Messaging, Video Production, and others.</p>
+</section>
+<section id="church-of-jesus-christ-of-latter-day-saints-missionary" class="level3">
+<h3 class="anchored" data-anchor-id="church-of-jesus-christ-of-latter-day-saints-missionary">Church of Jesus Christ of Latter-day Saints – Missionary</h3>
+<p><code>MAY 2022 – MAY 2024</code> Effectively provided humanitarian assistance and training to several thousand people over a two-year period in San Diego CA.</p>
+</section>
+<section id="regal-cinemas-floor-staff" class="level3">
+<h3 class="anchored" data-anchor-id="regal-cinemas-floor-staff">Regal Cinemas – Floor Staff</h3>
+<p><code>SPRING 2021 – SPRING 2022</code> Cleaned movie theatres, sold concessions and tickets.</p>
+</section>
+<section id="honeybaked-ham-co.-crew-member" class="level3">
+<h3 class="anchored" data-anchor-id="honeybaked-ham-co.-crew-member">HoneyBaked Ham Co.&nbsp;– Crew Member</h3>
+<p><code>DECEMBER 2019</code> Seasonal job wrapping, facing, and weighing hams and turkeys</p>
+</section>
+<section id="king-soopers-courtesy-clerk" class="level3">
+<h3 class="anchored" data-anchor-id="king-soopers-courtesy-clerk">King Soopers – Courtesy Clerk</h3>
+<p><code>JUNE 2019 – AUGUST 2019</code> Bagged Groceries, Faced Shelves, Gathered carts</p>
+</section>
+<section id="stonegate-pool-snack-shack" class="level3">
+<h3 class="anchored" data-anchor-id="stonegate-pool-snack-shack">Stonegate Pool – Snack Shack</h3>
+<p><code>SUMMER 2017 – SUMMER 2021</code> Staffed the snack shack at the pool on a volunteer basis each summer as a fundraiser for the Chaparral Marching Band.</p>
+</section>
+<section id="douglas-county-libraries-teen-library-council" class="level3">
+<h3 class="anchored" data-anchor-id="douglas-county-libraries-teen-library-council">Douglas County Libraries – Teen Library Council</h3>
+<p><code>SPRING 2016 – SPRING 2021</code> Planned, executed, and hosted various library events each month.</p>
+</section>
+<section id="cheim-elementary-band-camp-directors-assistant" class="level3">
+<h3 class="anchored" data-anchor-id="cheim-elementary-band-camp-directors-assistant">CHEIM Elementary Band Camp – Director’s Assistant</h3>
+<p><code>SUMMER 2015 – SUMMER 2019</code> Led sectionals for elementary students at a weeklong camp every year.</p>
+<!-- ### Footer
+
+Last updated: April 2025 -->
 
 
+</section>
 </section>
 </section>
 
